header row spacing fix and remove promise

--- a/app/assets/stylesheets/database/database.css.scss
+++ b/app/assets/stylesheets/database/database.css.scss
@@ -9,6 +9,8 @@
     padding-right: 25px;
     
     .database-header-row {
+      @include clear-fix;
+      
       .header-row-cell {
         float: left;
         width: 23%;
